Concrete CSS for the label around input.

--- a/lib/slice/htmlvar/yupput.container-inner-html-w-input.html
+++ b/lib/slice/htmlvar/yupput.container-inner-html-w-input.html
@@ -1,6 +1,6 @@
 <div id="ytilsYupputInputContainer">
     <div id="ytilsYupputInputContainerInputContainer">
-        <label>
+        <label id="ytilsYupputInputLabel">
             <input id="ytilsYupputInput" type="text" name="ytilsYupputInput" value="" placeholder="{{placeholder}}" />
         </label>
     </div>
