Fixes code examples, including sample for fixed .zIndex option.

--- a/examples/options-default.html
+++ b/examples/options-default.html
@@ -5,7 +5,7 @@
     <title>Ytils Yupput</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="./css/ytils.yupput.examples.css" rel="stylesheet" type="text/css" media="screen" />
-    <link href="../ytils.yupput-0.13.0.css" rel="stylesheet" type="text/css" media="screen" />
+    <link href="../dist/ytils.yupput-0.13.2.css" rel="stylesheet" type="text/css" media="screen" />
 </head>
 <body>
 <div id="ytilsYupputPresentation">
@@ -30,7 +30,7 @@
         </div>
     </div>
 </div>
-<script src="../ytils.yupput-0.13.0.js"></script>
+<script src="../dist/ytils.yupput-0.13.2.js"></script>
 <script src="https://opendata.ytils.com/example/yupput/default.js"></script>
 <script>
 
